[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt ="1.0.0"
actix-web = "4"
serde = "1.0.190"
tokio = { version = "1", features = ["full"] }
config ="0.10.1"
dotenv ="0.15.0"
actix-cors = "0.6.4"
serde_json = "1.0.108"
